--- a/css/style.css
+++ b/css/style.css
@@ -7,31 +7,30 @@
 
 /* General Rules */
 body {
-    width: 512px;
     border: 2px black dashed;
 }
 
 /* Header */
 .title-header {
-    padding: 5px 15px;
-    border-bottom: 2px black solid;
+    padding: 10px 30px;
+    border-bottom: 3px black solid;
 }
 
 /* Main Content */
-.content-cards {
-    padding: 0 20px;
+
+section {
+    padding: 16px;
 }
 
 .text-card {
-    margin: 15px 0;
-    padding: 15px;
-    border: 2px black solid;
-    min-height: 160px;
+    width: 400px;
+    padding: 16px;
+    border: 3px black solid;
+    margin: 0 auto;
 }
 
 /* Footer */
-
 .sign-footer {
-    padding: 5px 15px;
-    border-top: 2px black solid;
+    padding: 10px 30px;
+    border-top: 3px black solid;
 }
